# 2026_aqumon_capstone_project

./: .gitignore  README.md  README_EVENT-STUDY-TOOLKIT.md  README_compare_results.md  README_sentiment.md  compare_batch_size_structured_json.ipynb  compare_result_test.ipynb  compare_results.ipynb  compare_results.py  download.ipynb  download_filing_metadata.py  download_raw_data.py  download_raw_data_html.py  download_raw_data_xml.py  extract_golden_dataset.py  form4_event_study_draft.ipynb  form4_structured_extraction.py  non_txt_files_to_delete.txt  pyproject.toml  sec_forms_index.csv  sentiment.py  sentiment_structured.py  test.ipynb  transcript_sentiment.py  us_symbol_list.xlsx
event-study-toolkit-main/event-study-toolkit-main/: README_FORMULA.md
event-study-toolkit-main/event-study-toolkit-main/src/event_study_toolkit/: event_panel.csv
prompts/: 4_extraction_v1.txt  4_golden_structured_input.txt  4_structured_input.txt  4_v1.txt  4_v2.txt  README.md  transcript.txt
scripts/: README.md
scripts/analysis/: build_sentiment_timeseries.py  compare_results.py  sentiment.py  sentiment_structured.py  transcript_sentiment.py
scripts/datasets/: extract_golden_dataset.py
scripts/download/: download_filing_metadata.py  download_raw_data.py  download_raw_data_html.py  download_raw_data_xml.py
scripts/extraction/: form4_structured_extraction.py
scripts/utils/: accession_year_filter.py
