[project]
name = "aqmon-filing-research"
version = "0.1.0"
description = "Research scripts for SEC filing download, Form 4 extraction, sentiment scoring, and event studies."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiohttp>=3.13,<4",
  "beautifulsoup4>=4.14,<5",
  "matplotlib>=3.9,<4",
  "numpy>=2.2,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
  "pyarrow>=18,<19",
  "requests>=2.32,<3",
  "scipy>=1.14,<2",
  "tqdm>=4.67,<5",
]

[dependency-groups]
notebook = [
  "ipykernel>=6.29,<7",
  "jupyterlab>=4.4,<5",
  "nbclient>=0.10,<1",
  "nbconvert>=7.16,<8",
  "nbformat>=5.10,<6",
  "notebook>=7.3,<8",
]

[tool.uv]
package = false
default-groups = ["notebook"]
